# RectumRadioBook

./: .gitignore  .markdownlint.json  2025-08-05-caveat-the-messages-below-were-generated-by-the-u.txt  CLAUDE.md  README.md  TODO  TODO.corrections.md  TODO.md  _quarto-fast.yml  _quarto.yml  activate.sh  auto_correction.md  bibliography-key-fixes.md  bibliography-mapping.md  create_bibliography_mapping.py  custom-reference-doc.docx  gost-r-7-0-5-2008-numeric-alphabetical.csl  iRECIST_guidelines.txt  index.qmd  index.tex  main.md  main.py  pyproject.toml  questions_100.md  references.bib  reformat_tests.py  requirements.txt  test_output.qmd  vancouver-ru-first.csl  vancouver.csl
.claude/: mcp-config.json
corrections/: autocorrection.md  burovik2.md  burovik2_comments.md  burovik2_corrections_report.md  burovik_1.md  burovik_1_comments.md  unresolved_burovik2_comments.md
example/: main.md
img/: layers.txt
scripts/: README.md  clean_generated_images.py  clean_markdown.py  config.py  extract_comments.py  prepare_images.py  prepare_images_prerender.py  setup_crossref.py  test_image_processing.py
src/: Abbrevations.qmd  Bibliography.qmd  Introduction.qmd  Rectal-Cancer-Staging.qmd  Rectum-Anatomy.md  Rectum-Anatomy.qmd  Research-Methodology.md  Research-Methodology.qmd  Scan-Methodology.qmd  Structured-Report-Primary-MRI-Staging.qmd  Tumor-Detection.md  Tumor-Detection.qmd  rectal-cancer-tests-formatted.md  rectal-cancer-tests.md  Анатомия-прямой-кишки.md  Введение.md  Методика-исследования.md  Список-литературы.md  Стадирование-рака-прямой-кишки.md  (+1 more)
(+35 files in other folders)
