[project]
name = "rectumradiobook"
version = "0.1.0"
description = "Учебное пособие по лучевой диагностике рака прямой кишки"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lxml>=4.9.0",
    "Pillow>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "quarto>=1.3.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["scripts"]
