[project]
name = "rectumradiobook"
version = "0.1.0"
description = "Учебное пособие по лучевой диагностике рака прямой кишки"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "claude>=0.4.11",
    "lxml>=4.9.0",
    "Pillow>=9.0.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "quarto",
    "tomli>=2.2.1",
]

[project.optional-dependencies]
dev = [

]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["scripts"]
